--- a/index.html
+++ b/index.html
@@ -118,4 +118,4 @@
     </body>
 
 </html>
-<!-- Website Ini Dibuat oleh Albert Surya Atmadja -->
+<!-- Website Ini Dibuat oleh Albert Surya Atmadja. -->
